# zombiesplit

./: .gitmodules  Cargo.toml  LICENSE  README.md  architecture.md  build.rs  scd11-pb.toml  scd11.toml  soniccd-pb.toml  soniccd.toml  sys.toml  zombiesplit.db
.github/workflows/: rust.yml
assets/fonts/large/: font.aseprite  metrics.toml
assets/fonts/medium/: font.aseprite  metrics.toml
assets/fonts/small/: font.aseprite  metrics.toml
proto/: zombiesplit.proto
proto/zombiesplit/: zombiesplit.proto
src/: cli.rs  config.rs  db.rs  lib.rs  model.rs  net.rs  presenter.rs  server.rs  ui.rs  view.rs  zombie.rs
src/config/: client.rs  game.rs  server.rs  system.rs  util.rs
src/config/server/: comparison.rs  db.rs
src/db/: category.rs  comparison.rs  error.rs  game.rs  init.rs  inspect.rs  run.rs  util.rs
src/db/category/: get.rs  id.rs
src/db/comparison/: get.rs  sql.rs
src/db/run/: finder.rs  get.rs  inserter.rs  observer.rs  sink.rs
src/model/: aggregate.rs  attempt.rs  comparison.rs  config.rs  db.rs  finished.rs  game.rs  history.rs  load.rs  pace.rs  run.rs  session.rs  short.rs  split.rs  time.rs  timing.rs
src/model/aggregate/: index.rs  set.rs
src/model/attempt/: action.rs  observer.rs  run.rs  session.rs  split.rs  state.rs
src/model/attempt/observer/: aggregate.rs  debug.rs  mux.rs  split.rs  time.rs
src/model/attempt/split/: set.rs
src/model/comparison/: pace.rs
src/model/db/: error.rs
src/model/game/: category.rs  config.rs  split.rs
src/model/history/: run.rs  timing.rs
src/model/session/: action.rs  attempt.rs  event.rs  observer.rs  run.rs  sink.rs  split.rs  state.rs
src/model/session/event/: debug.rs  mux.rs  observer.rs  split.rs  time.rs
src/model/session/observer/: mux.rs  null.rs  split.rs  time.rs
src/model/session/split/: set.rs
src/model/time/: carry.rs  error.rs  field.rs  format.rs  position.rs
src/model/timing/: aggregate.rs  comparison.rs  time.rs
src/model/timing/aggregate/: index.rs  set.rs
src/model/timing/comparison/: delta.rs  pace.rs  provider.rs  run.rs
src/model/timing/time/: error.rs  field.rs  format.rs  human.rs  position.rs
src/net/: client.rs  dump.rs  io.rs  proto.rs  server.rs
src/net/client/: action.rs  error.rs
src/net/proto/: decode.rs  encode.rs
src/net/proto/decode/: action.rs  attempt.rs  comparison.rs  dump.rs  error.rs  event.rs  timing.rs
src/net/proto/encode/: action.rs  attempt.rs  comparison.rs  dump.rs  event.rs  timing.rs
src/net/server/: error.rs  grpc.rs  listener.rs
src/presenter/: cursor.rs  editor.rs  event.rs  mode.rs  nav.rs  split.rs
src/server/: error.rs  listener.rs  router.rs
src/ui/: error.rs  event.rs  gfx.rs  presenter.rs  sdl.rs  state.rs  view.rs
src/ui/gfx/: colour.rs  colours.rs  metrics.rs  render.rs
src/ui/presenter/: cursor.rs  editor.rs  event.rs  mode.rs  nav.rs  observer.rs  state.rs
src/ui/presenter/mode/: decision.rs  editor.rs  event.rs  nav.rs  quitting.rs
src/ui/presenter/state/: cursor.rs  editor.rs  footer.rs  split.rs
src/ui/sdl/: event.rs  font.rs  manager.rs  metrics.rs  render.rs
src/ui/view/: config.rs  error.rs  event.rs  gfx.rs  layout.rs  update.rs  widget.rs
src/ui/view/config/: layout.rs  theme.rs  time.rs
src/ui/view/gfx/: colour.rs  editor.rs  error.rs  font.rs  header.rs  metrics.rs  pen.rs  position.rs  render.rs  split.rs  total.rs  widget.rs  writer.rs
src/ui/view/gfx/colour/: bg.rs  default.rs  definition.rs  fg.rs
src/ui/view/gfx/font/: error.rs  manager.rs  map.rs  metrics.rs  set.rs
src/ui/view/gfx/metrics/: anchor.rs  axis.rs  conv.rs  point.rs  rect.rs  size.rs
src/ui/view/widget/: editor.rs  footer.rs  header.rs  label.rs  root.rs  split.rs  stack.rs  status.rs  time.rs  total.rs
src/ui/view/widget/footer/: row.rs
src/view/: config.rs  error.rs  event.rs  gfx.rs
src/view/gfx/: colour.rs  editor.rs  font.rs  header.rs  metrics.rs  pen.rs  position.rs  render.rs  split.rs  total.rs  widget.rs
src/view/gfx/colour/: error.rs  fg.rs
src/view/gfx/font/: error.rs  manager.rs  metrics.rs
tests/: db.rs  model.rs  session.rs
themes/edg64/: README.md  palette.ron  palette.toml
(+2 files in other folders)
